--- a/classTo9/src/scss/_index.scss
+++ b/classTo9/src/scss/_index.scss
@@ -331,7 +331,7 @@
         .xm-huang{ 
             position: absolute;
             line-height: 59px;
-            right: -36px;
+            left: 186px;
             height: 63px;
             width: 41px;
             background-position: -5px -914px;
