--- a/classTo9/src/scss/_index.scss
+++ b/classTo9/src/scss/_index.scss
@@ -328,10 +328,10 @@
     }
     .search-change{
         position: relative;
-        .xm-huang{ 
+        .xm-huang{  
             position: absolute;
             line-height: 59px;
-            left：100%;
+            left:100%;
             height: 63px;
             width: 41px;
             background-position: -5px -914px;
