--- a/classTo50/src/scss/_component.scss
+++ b/classTo50/src/scss/_component.scss
@@ -1,6 +1,18 @@
 /*
     @table
 */
+.table-content{
+    position: relative;
+}
+.table-l{
+    position: absolute;
+    left: 0;
+    top: 21px;
+    width: 25px;
+}
+.table-r{
+    margin-left: 25px;
+}
 .table{
     width: 100%;
     
@@ -20,6 +32,11 @@
         font-size: 12px;
         border-bottom:1px solid #ccc;
     }
+    .tab-btn{
+        text-align: left;
+        box-sizing: border-box;
+    }
+    
 }
 
 
@@ -64,6 +81,17 @@
     
     &.btn-other{
         $color: #E271A5;
+        
+        border: 1px solid $color;
+        
+        &:hover{
+            color: #fff;
+            background: $color;
+        }
+    }
+    
+    &.btn-blue{
+        $color: #08c;
         
         border: 1px solid $color;
         
@@ -422,6 +450,14 @@
     }
     i{
        font-style: normal; 
+    }
+}
+.must-should{
+    font-size: 15px;
+    font-style: normal;
+    span{
+        color: red;
+        vertical-align: text-top;
     }
 }
 
